# IQOptionTestTask

./: CMakeLists.txt  README.md
ipc/: protocol.h  transport.h
service/: core_data.h  job_queue.cpp  job_queue.h  main.cpp  message_builder.h  message_dispatcher.cpp  message_dispatcher.h  overseer.cpp  overseer.h  rating_announcer.cpp  rating_announcer.h  rating_calculator.cpp  rating_calculator.h  worker_pool.cpp  worker_pool.h
test/: main.cpp  message_interpreter.h  name_generator.cpp  name_generator.h  storage.cpp  storage.h  strategy.cpp  strategy.h
utils/: binary_storage.h  date_time.h  spinlock.h  types.h
